url: "http://localhost:3000"
---
- tapOn:
    id: "login-username"
- inputText: ${USERNAME}
- tapOn:
    id: "login-password"
- inputText: ${PASSWORD}
- tapOn:
    id: "login-submit"
- extendedWaitUntil:
    visible:
      id: "logout-btn"
    timeout: 10000
